--- a/prueba.html
+++ b/prueba.html
@@ -7,10 +7,12 @@
     <title>Document</title>
 </head>
 <body>
+    /* Archivo de prueba*/
     <div>
     <h1>Esta es una prueba</h1>
     <h2>Prueba2</h2>
     <h3>PRUEBAAAA</h3>
 </div>
+    <h4>esto es una prueba </h4>
 </body>
 </html>
