--- a/Hoteles.html
+++ b/Hoteles.html
@@ -75,7 +75,7 @@
     
       <div>
         <section class="container-fluid">
-      <div class="row featurette align-items-center ">
+      <div class="row featurette align-items-center margin-top ">
         <div class="col-md-7 order-md-2 ">
           <h1 class="titulo text--h1 featurette-heading contenedorTextoH1">Hotel Princess</h1>
           <p class="letraS lead ">
