--- a/Hotelkrystal.html
+++ b/Hotelkrystal.html
@@ -88,7 +88,7 @@
       <section class="container-fluid">
     <div class="row featurette align-items-center ">
       <div class="col-md-7  ">
-        <h1 class="titulo text--h1 featurette-heading contenedorTextoH1">Que es acapulco?</h1>
+        <h1 class="titulo text--h1 featurette-heading contenedorTextoH1">Hotel Krystal</h1>
         <p class="letraS lead ">
           El Krystal Beach Acapulco se encuentra cerca del centro histórico de Acapulco y cuenta con 2 bares, 2 restaurantes, una cafetería y amplias instalaciones para reuniones y salones de baile. Este complejo espectacular está situado en la famosa zona de Acapulco Dorado y ofrece magníficas vistas a la bahía y numerosas actividades y servicios.
         </p>
@@ -98,11 +98,7 @@
 </div>
 </section>
 
-    <div>
-    <iframe class="mapA4 " src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d30548.505374684697!2d-99.91338162297363!3d16.84801328545562!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ca581e6a64caab%3A0x74dcd0a636c3f0d6!2sHotel%20Krystal%20Beach%20Acapulco!5e0!3m2!1ses-419!2smx!4v1629922389522!5m2!1ses-419!2smx"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-
-
+  
 </div>
 <div class="grid">
     <img class="imG3" src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/26323513.jpg?k=ed19d90c851e5dd6398231891d5ba62319764e6165eb8bda05e578812ba98789&o=&hp=1" alt="krystal">
@@ -113,6 +109,11 @@
     <img class="imG3" src="https://cf.bstatic.com/xdata/images/hotel/max1024x768/26323522.jpg?k=0d716e95a678db76f637b4e6789a3475492ff1d223d04e29e74c5fcb67142092&o=&hp=1" alt="img6">    
 
 </div>
+<div>
+  <iframe class="mapA4 " src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d30548.505374684697!2d-99.91338162297363!3d16.84801328545562!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x85ca581e6a64caab%3A0x74dcd0a636c3f0d6!2sHotel%20Krystal%20Beach%20Acapulco!5e0!3m2!1ses-419!2smx!4v1629922389522!5m2!1ses-419!2smx"  style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+  </div>
+
+
 </div>
 
 
